[package]
name = "mclient"
version = "0.1.0"
authors = ["milo <serxka>"]
edition = "2018"

[dependencies]
ron = "0.6"

[dependencies.iced]
version = "0.2"
git = "https://github.com/hecrj/iced"
rev = "842d54732bce8f9c8b070d9bed9809b70ed728a7"
features = ["tokio"]

[dependencies.matrix-sdk]
version = "0.2.0"
git = "https://github.com/matrix-org/matrix-rust-sdk"
rev = "c39fa6543fe1310a007962876f472fe1994c05ae"
features = ["encryption", "sled_cryptostore", "sled_state_store", "native-tls"]

[dependencies.ruma]
version = "0.0.2"
git = "https://github.com/ruma/ruma"
rev = "d6aa37c848b7f682a98c25b346899e284ffc6df7"
features = ["client-api", "compat", "unstable-pre-spec"]
